--- a/assets/styles/contact.css
+++ b/assets/styles/contact.css
@@ -8,7 +8,7 @@ body{
     grid-template-rows: 100px 1fr 1fr;
 }
 main {
-    height: 100vh;
+   
 }
 .offcanvas{
     background-color: #ccafaf;
@@ -40,9 +40,19 @@ footer{
     border-radius: 5px;
     background-color: #f6ebe9
 }
-.formulario {
+.intro {
     margin: 20px;
+    
 
+}
+.formulario {
+    margin: 3em;
+    padding: 1em;
+
+}
+.formulario:hover {
+    border: 1px solid #bb8789;
+    border-radius: 10px;
 }
 
 
