--- a/assets/styles/contact.css
+++ b/assets/styles/contact.css
@@ -38,14 +38,14 @@ footer{
     border-radius: 5px;
     background-color: #f6ebe9
 }
+main {
+    margin: 6em;
+}
 .intro {
-    margin: 20px;
+    text-align: center;
 }
-.fin {
-    margin: 20px;
-}
+
 .formulario {
-    margin: 3em;
     padding: 1em;
     
 }
