--- a/assets/styles/about.css
+++ b/assets/styles/about.css
@@ -1,11 +1,9 @@
-* {
 
-}
 body{
     font-family: sans-serif;
 }
 main {
-    height: 100vh;
+    margin: 6em;
 }
 .offcanvas{
     background-color: #ccafaf;
@@ -37,3 +35,52 @@ footer{
     border-radius: 5px;
     background-color: #f6ebe9
 }
+.conteiner {
+    display: grid;
+    grid-template-columns: 50px 1fr 1fr 50px;
+    grid-template-rows: repeat(5, 1fr);
+}
+.bienvenido {
+    grid-column: 2/4;
+    grid-row: 1/2;
+}
+.img {
+    
+    grid-column: 2/3;
+    grid-row: 2/3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    img {
+        width: 200px;
+        height: 200px;    
+}
+}
+.text1 {
+    grid-column: 3/4;
+    grid-row: 2/3;
+}
+.text2 {
+    grid-column: 2/4;
+    grid-row: 3/4;
+}
+.text3 {
+    grid-column: 2/3;
+    grid-row: 4/5;
+}
+.img2 {
+    grid-column: 3/4;
+    grid-row: 4/5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    img {
+        width: 200px;
+        height: 200px;    
+}
+}
+.text4 {
+    grid-column: 2/4;
+    grid-row: 5/6;
+}
+
