--- a/assets/styles/about.css
+++ b/assets/styles/about.css
@@ -41,6 +41,7 @@ footer{
     grid-template-rows: repeat(5, 1fr);
 }
 .bienvenido {
+    margin: auto;
     grid-column: 2/4;
     grid-row: 1/2;
 }
@@ -52,10 +53,14 @@ footer{
     align-items: center;
     justify-content: center;
     img {
-        width: 200px;
-        height: 200px;    
+        width: 280px;
+        height: 280px; 
+        border: 1px solid #ccafaf;
+        border-radius: 200px;
+        box-shadow: 5px 5px 5px #bb8789;
 }
 }
+
 .text1 {
     grid-column: 3/4;
     grid-row: 2/3;
@@ -72,11 +77,13 @@ footer{
     grid-column: 3/4;
     grid-row: 4/5;
     display: flex;
-    align-items: center;
     justify-content: center;
     img {
-        width: 200px;
-        height: 200px;    
+        width: 280px;
+        height: 280px;    
+        border: 1px solid #ccafaf;
+        border-radius: 200px;
+        box-shadow: 5px 5px 5px #bb8789;
 }
 }
 .text4 {
